--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jose": "^5.4.0",
     "lowdb": "^7.0.1",
     "lucide-react": "^0.368.0",
-    "next": "14.2.3",
+    "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
