--- a/package.json
+++ b/package.json
@@ -11,12 +11,32 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
-    "next": "14.2.3",
+    "@hookform/resolvers": "^3.4.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lowdb": "^7.0.1",
+    "lucide-react": "^0.368.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "server-only": "^0.0.1",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@mikecodeur/course-app-cli": "1.0.10",
+    "@mikecodeur/course-app-cli": "1.0.12",
     "@types/node": "^20.14.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
