--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prod": "pnpm build && pnpm start",
     "lint": "next lint",
     "format": "prettier . --check",
     "format:fix": "prettier . --write"
