--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
+    "react-use": "^17.5.0",
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "remark-rehype": "^11.1.0",
