--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-course-template",
+  "name": "next-rendering",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,59 +12,61 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.4.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@next/mdx": "^14.2.14",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.13",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lowdb": "^7.0.1",
     "lucide-react": "^0.368.0",
-    "next": "14.2.4",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.53.0",
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-rehype": "^11.1.0",
+    "remark-rehype": "^11.1.1",
     "server-only": "^0.0.1",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@mikecodeur/course-app-cli": "1.0.15",
-    "@types/node": "^20.14.1",
-    "@types/react": "^18.3.3",
+    "@mikecodeur/course-app-cli": "1.0.23",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-json-format": "^2.0.1",
-    "eslint-plugin-promise": "^6.2.0",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-unicorn": "^52.0.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
+    "json-server": "1.0.0-beta.3",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   }
 }
